18743
```scala
scala> def x[T](t: List[T]) = t match { case res @ List[String] =>}
<console>:7: error: unsupported pattern: TypeTree / x1: List[String] (binder: List[T]) @ List[String] (this is a scalac bug.)
       def x[T](t: List[T]) = t match { case res @ List[String] =>}
                                                       ^
```

The error message should definitely be improved.
